--- a/src/main/resources/public/static/index.html
+++ b/src/main/resources/public/static/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Information about our team</title>
 </head>
 <body>
-    <p>Наша команда</p>
+    <div>
+        <h1>Наша команда</h1>
+        <h3>Ми активні студенти, одногрупники, та просто любителі джави та спрінга. Для нас немає перешкод, ми можемо зробити все, треба тільки трішки подумати :)</h3>
+        <a class="main" href="arsenInfo.html">Нерода Арсен</a>
+        <a class="main" href="romanInfo.html">Водзінський Роман</a>
+        <a class="main" href="dmytroInfo.html">Возниця Дмитро</a>
+    </div>
 </body>
 </html>
